--- a/src/main/webapp/admin.xhtml
+++ b/src/main/webapp/admin.xhtml
@@ -24800,7 +24800,7 @@ table.text-center, table.text-center td, table.text-center th {
 		                  <a href="#" class="btn btn-default btn-flat">Profile</a>
 		                </div>
 		                <div class="pull-right">
-		                  <a href="#" class="btn btn-default btn-flat">Sign out</a>
+		                  <a href="/ExampleSystem/j_spring_security_logout" class="btn btn-default btn-flat">Sign out</a>
 		                </div>
 		              </li>
 		            </ul>
