--- a/src/main/webapp/user/List.xhtml
+++ b/src/main/webapp/user/List.xhtml
@@ -20,7 +20,7 @@
         </p:contextMenu>
 
         <p:dataTable id="datalist"
-                        var="user"
+                        var="user_"
                         value="#{userController.users}"
                         selection="#{userController.selected}"
                         filtered="#{userController.filtered}"
@@ -51,13 +51,13 @@
                 </div>
             </f:facet>
 
-            <p:columns value="#{userController.columns}" var="column" columnIndexVar="colIndex" sortBy="#{userController[column.property]}" filterBy="#{userController[column.property]}" exportable="#{userController.listVisible[colIndex]}" visible="#{userController.listVisible[colIndex]}" width="#{userController.listWidth[colIndex]}">
+            <p:columns value="#{userController.columns}" var="column" columnIndexVar="colIndex" sortBy="#{user_[column.property]}" filterBy="#{user_[column.property]}" exportable="#{userController.listVisible[colIndex]}" visible="#{userController.listVisible[colIndex]}" width="#{userController.listWidth[colIndex]}">
 
                 <f:facet name="header">
                     <h:outputText value="#{column.header}" />
                 </f:facet>
 
-                <h:outputText value="#{userController[column.property]}"/>
+                <h:outputText value="#{user_[column.property]}"/>
 
             </p:columns>
 
