Signed-off-by: xFaabricio <fabricio_oliveira1@hotmail.com>

--- a/src/main/webapp/Login.xhtml
+++ b/src/main/webapp/Login.xhtml
@@ -8,7 +8,8 @@
 	xmlns:p="http://primefaces.org/ui">
 
 <h:head>
-	<title><ui:insert name="title">Example System</ui:insert></title>
+	<title><ui:insert name="title">Ambulance Task</ui:insert></title>
+    <link rel="icon" href="images/favicon3.png"/>
 
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -25698,7 +25699,7 @@ div[id="growlLogin_container"] {
 	</f:metadata>
 	<div class="login-box">
 		<div class="login-logo">
-			<b>Example System </b> EX
+			<b>Ambulance Task </b> AT
 		</div>
 		<div class="login-box-body" style="border-radius: 10px">
 			<p class="login-box-msg">Sign in to start your session</p>
