--- a/src/main/webapp/TemporaryHome.xhtml
+++ b/src/main/webapp/TemporaryHome.xhtml
@@ -9,7 +9,7 @@
 
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-	<title>Example System</title>
+	<title>Ambulance Task</title>
 </h:head>
 
 <h:body style="background-image: url(images/1417895045940.jpg); background-repeat: no-repeat; width: 100%; height: 100%;" responsive="true">
