--- a/src/main/webapp/admin.xhtml
+++ b/src/main/webapp/admin.xhtml
@@ -9,7 +9,8 @@
     <h:head>
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-        <title>Example System</title>
+        <link rel="icon" href="images/favicon3.png"/>
+        <title>Ambulance Task</title>
         <!-- Tell the browser to be responsive to screen width -->
         <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport"/>
         <meta http-equiv="cache-control" content="max-age=0" />
@@ -24649,9 +24650,9 @@ table.text-center, table.text-center td, table.text-center th {
                 <!-- Logo -->
                 <a href="#{request.contextPath}/Home.xhtml" class="logo">
                     <!-- mini logo for sidebar mini 50x50 pixels -->
-                    <span class="logo-mini"><b>EX</b></span>
+                    <span class="logo-mini"><b>AT</b></span>
                     <!-- logo for regular state and mobile devices -->
-                    <span class="logo-lg"><b><h:outputText value="Example System"/></b></span>
+                    <span class="logo-lg"><b><h:outputText value="Ambulance Task"/></b></span>
                 </a>
                 <!-- Header Navbar: style can be found in header.less -->
                 <!-- Header Navbar -->
