--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -8,7 +8,7 @@
 
     <ui:composition template="/admin.xhtml">
         <ui:define name="title">
-            <h:outputText value="Example System"></h:outputText>
+            <h:outputText value="Ambulance Task"></h:outputText>
         </ui:define>
         <ui:define name="body">
             <p:panel header="Welcome !">
