--- a/src/main/webapp/schedule/List.xhtml
+++ b/src/main/webapp/schedule/List.xhtml
@@ -11,10 +11,10 @@
 <!--     	<p:commandButton value="Ajax Submit" id="ajax" styleClass="ui-priority-primary" /> -->
 
         <p:contextMenu id="ScheduleDataTableContextMenu" for="datalist">  
-            <p:menuitem value="#{messages.Create}" onclick="document.getElementById('ScheduleListForm:datalist:datalist:createButton').click();" icon="ui-icon-plus"/>
-            <p:menuitem value="#{messages.View}" onclick="document.getElementById('ScheduleListForm:datalist:datalist:viewButton').click();" icon="ui-icon-search"/>
-            <p:menuitem value="#{messages.Edit}" onclick="document.getElementById('ScheduleListForm:datalist:datalist:editButton').click();" icon="ui-icon-pencil"/>
-            <p:menuitem value="#{messages.Delete}" onclick="document.getElementById('ScheduleListForm:datalist:datalist:deleteButton').click();" icon="ui-icon-trash"/>
+            <p:menuitem value="Create" onclick="document.getElementById('ScheduleListForm:datalist:datalist:createButton').click();" icon="ui-icon-plus"/>
+<!--             <p:menuitem value="View" onclick="document.getElementById('ScheduleListForm:datalist:datalist:viewButton').click();" icon="ui-icon-search"/> -->
+            <p:menuitem value="Edit" onclick="document.getElementById('ScheduleListForm:datalist:datalist:editButton').click();" icon="ui-icon-pencil"/>
+            <p:menuitem value="Delete" onclick="document.getElementById('ScheduleListForm:datalist:datalist:deleteButton').click();" icon="ui-icon-trash"/>
 <!--             <p:separator/> -->
 <!--             <p:menuitem value="#{messages.ScheduleMenuItem_ScheduleList}" icon="ui-icon-search"  action="#{scheduleController.navigateSchedulesList}" disabled="#{empty scheduleController.selected.scheduleList}" ajax="false"/>   -->
         </p:contextMenu>
@@ -34,10 +34,10 @@
             <f:facet name="header">
                 <div class="row row-nomargin">
                     <div class="col-lg-3">
-                        <p:inputText id="globalFilter" onkeyup="PF('datalistWidget').filter()" class="pull-left" style="width: 100%" placeholder="#{messages.enterKeyword}"/>
+<!--                         <p:inputText id="globalFilter" onkeyup="PF('datalistWidget').filter()" class="pull-left" style="width: 100%" placeholder="Enter Key Word"/> -->
                     </div>
                     <div class="col-lg-6">
-                        <h:outputText value="#{messages.ListScheduleTitle}"/>   
+                        <h:outputText value="List Schedule"/>   
                     </div>
                     <div class="col-lg-3">
                         <div class="pull-right">
@@ -63,11 +63,11 @@
 
             <f:facet name="{buttons}">
                 <div class="footer-left">
-                    <p:commandButton id="createButton" styleClass="btn btn-primary" icon="fa fa-plus"   value="#{messages.Create}" actionListener="#{scheduleController.prepareCreate}" update=":ScheduleCreateForm:ScheduleCreateForm" oncomplete="PF('ScheduleCreateDialog').show()" onstart="PF('Loading').show()" onsuccess="PF('Loading').hide()"/>
-                    <p:commandButton id="viewButton"   styleClass="btn btn-primary" icon="fa fa-search" value="#{messages.View}" update=":ScheduleViewForm:ScheduleViewForm" oncomplete="PF('ScheduleViewDialog').show()" disabled="#{empty scheduleController.selected}" onstart="PF('Loading').show()" onsuccess="PF('Loading').hide()"/>
-                    <p:commandButton id="editButton"   styleClass="btn btn-primary" icon="fa fa-pencil" value="#{messages.Edit}" update=":ScheduleEditForm:ScheduleEditForm" oncomplete="PF('ScheduleEditDialog').show()" disabled="#{empty scheduleController.selected}" onstart="PF('Loading').show()" onsuccess="PF('Loading').hide()"/>
-                    <p:commandButton id="deleteButton" styleClass="btn btn-primary" icon="fa fa-trash"  value="#{messages.Delete}" actionListener="#{scheduleController.delete}" update=":growl,datalist" disabled="#{empty scheduleController.selected}" onstart="PF('Loading').show()" onsuccess="PF('Loading').hide()">
-                        <p:confirm header="#{messages.ConfirmationHeader}" message="#{messages.ConfirmDeleteMessage}" icon="fa fa-warning"/>
+                    <p:commandButton id="createButton" styleClass="btn btn-primary" icon="fa fa-plus"   value="Create" actionListener="#{scheduleController.prepareCreate}" update=":ScheduleCreateForm:ScheduleCreateForm" oncomplete="PF('ScheduleCreateDialog').show()" onstart="PF('Loading').show()" onsuccess="PF('Loading').hide()"/>
+<!--                     <p:commandButton id="viewButton"   styleClass="btn btn-primary" icon="fa fa-search" value="View" update=":ScheduleViewForm:ScheduleViewForm" oncomplete="PF('ScheduleViewDialog').show()" disabled="#{empty scheduleController.selected}" onstart="PF('Loading').show()" onsuccess="PF('Loading').hide()"/> -->
+                    <p:commandButton id="editButton"   styleClass="btn btn-primary" icon="fa fa-pencil" value="Edit" update=":ScheduleEditForm:ScheduleEditForm" oncomplete="PF('ScheduleEditDialog').show()" disabled="#{empty scheduleController.selected}" onstart="PF('Loading').show()" onsuccess="PF('Loading').hide()"/>
+                    <p:commandButton id="deleteButton" styleClass="btn btn-primary" icon="fa fa-trash"  value="Delete" actionListener="#{scheduleController.delete}" update=":growl,datalist" disabled="#{empty scheduleController.selected}" onstart="PF('Loading').show()" onsuccess="PF('Loading').hide()">
+                        <p:confirm header="Confirmation" message="Do you really want to perform this operation?" icon="fa fa-warning"/>
                     </p:commandButton>
                 </div>
             </f:facet>
