--- a/src/main/webapp/confirmation.xhtml
+++ b/src/main/webapp/confirmation.xhtml
@@ -5,8 +5,8 @@
                 xmlns:p="http://primefaces.org/ui">
 
     <p:confirmDialog global="true" styleClass="box box-danger">  
-        <p:commandButton value="#{messages.Yes}" type="button" styleClass="ui-confirmdialog-yes btn-success" icon="fa fa-check"/>  
-        <p:commandButton value="#{messages.No}" type="button" styleClass="ui-confirmdialog-no btn-danger" icon="fa fa-remove"/>       
+        <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes btn-success" icon="fa fa-check"/>  
+        <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no btn-danger" icon="fa fa-remove"/>       
     </p:confirmDialog>
 
 </ui:composition>
