--- a/src/main/webapp/group/List.xhtml
+++ b/src/main/webapp/group/List.xhtml
@@ -4,15 +4,17 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:f="http://java.sun.com/jsf/core"
-                xmlns:p="http://primefaces.org/ui">
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:sec="http://www.springframework.org/security/tags">
+
 
     <h:form id="GroupListForm" class="form-height">
 
         <p:contextMenu id="GroupDataTableContextMenu" for="datalist">  
-            <p:menuitem value="#{messages.Create}" onclick="document.getElementById('GroupListForm:datalist:datalist:createButton').click();" icon="ui-icon-plus"/>
-            <p:menuitem value="#{messages.View}" onclick="document.getElementById('GroupListForm:datalist:datalist:viewButton').click();" icon="ui-icon-search"/>
-            <p:menuitem value="#{messages.Edit}" onclick="document.getElementById('GroupListForm:datalist:datalist:editButton').click();" icon="ui-icon-pencil"/>
-            <p:menuitem value="#{messages.Delete}" onclick="document.getElementById('GroupListForm:datalist:datalist:deleteButton').click();" icon="ui-icon-trash"/>
+            <p:menuitem value="Create" onclick="document.getElementById('GroupListForm:datalist:datalist:createButton').click();" icon="ui-icon-plus"/>
+<!--             <p:menuitem value="View" onclick="document.getElementById('GroupListForm:datalist:datalist:viewButton').click();" icon="ui-icon-search"/> -->
+            <p:menuitem value="Edit" onclick="document.getElementById('GroupListForm:datalist:datalist:editButton').click();" icon="ui-icon-pencil"/>
+            <p:menuitem value="Delete" onclick="document.getElementById('GroupListForm:datalist:datalist:deleteButton').click();" icon="ui-icon-trash"/>
         </p:contextMenu>
 
         <p:dataTable id="datalist"
@@ -30,10 +32,10 @@
             <f:facet name="header">
                 <div class="row row-nomargin">
                     <div class="col-lg-3">
-                        <p:inputText id="globalFilter" onkeyup="PF('datalistWidget').filter()" class="pull-left" style="width: 100%" placeholder="#{messages.enterKeyword}"/>
+<!--                         <p:inputText id="globalFilter" onkeyup="PF('datalistWidget').filter()" class="pull-left" style="width: 100%" placeholder="Enter Key Word"/> -->
                     </div>
                     <div class="col-lg-6">
-                        <h:outputText value="#{messages.ListGroupTitle}"/>   
+                        <h:outputText value="List Group"/>   
                     </div>
                     <div class="col-lg-3">
                         <div class="pull-right">
@@ -59,11 +61,11 @@
 
             <f:facet name="{buttons}">
                 <div class="footer-left">
-                    <p:commandButton id="createButton" styleClass="btn btn-primary" icon="fa fa-plus"   value="#{messages.Create}" actionListener="#{groupController.prepareCreate}" update=":GroupCreateForm:GroupCreateForm" oncomplete="PF('GroupCreateDialog').show()" onstart="PF('Loading').show()" onsuccess="PF('Loading').hide()"/>
-                    <p:commandButton id="viewButton"   styleClass="btn btn-primary" icon="fa fa-search" value="#{messages.View}" update=":GroupViewForm:GroupViewForm" oncomplete="PF('GroupViewDialog').show()" disabled="#{empty groupController.selected}" onstart="PF('Loading').show()" onsuccess="PF('Loading').hide()"/>
-                    <p:commandButton id="editButton"   styleClass="btn btn-primary" icon="fa fa-pencil" value="#{messages.Edit}" update=":GroupEditForm:GroupEditForm" oncomplete="PF('GroupEditDialog').show()" disabled="#{empty groupController.selected}" onstart="PF('Loading').show()" onsuccess="PF('Loading').hide()"/>
-                    <p:commandButton id="deleteButton" styleClass="btn btn-primary" icon="fa fa-trash"  value="#{messages.Delete}" actionListener="#{groupController.delete}" update=":growl,datalist" disabled="#{empty groupController.selected}" onstart="PF('Loading').show()" onsuccess="PF('Loading').hide()">
-                        <p:confirm header="#{messages.ConfirmationHeader}" message="#{messages.ConfirmDeleteMessage}" icon="fa fa-warning"/>
+                    <p:commandButton id="createButton" styleClass="btn btn-primary" icon="fa fa-plus"   value="Create" actionListener="#{groupController.prepareCreate}" update=":GroupCreateForm:GroupCreateForm" oncomplete="PF('GroupCreateDialog').show()" onstart="PF('Loading').show()" onsuccess="PF('Loading').hide()"/>
+<!--                     <p:commandButton id="viewButton"   styleClass="btn btn-primary" icon="fa fa-search" value="View" update=":GroupViewForm:GroupViewForm" oncomplete="PF('GroupViewDialog').show()" disabled="#{empty groupController.selected}" onstart="PF('Loading').show()" onsuccess="PF('Loading').hide()"/> -->
+                    <p:commandButton id="editButton"   styleClass="btn btn-primary" icon="fa fa-pencil" value="Edit" update=":GroupEditForm:GroupEditForm" oncomplete="PF('GroupEditDialog').show()" disabled="#{empty groupController.selected}" onstart="PF('Loading').show()" onsuccess="PF('Loading').hide()"/>
+                    <p:commandButton id="deleteButton" styleClass="btn btn-primary" icon="fa fa-trash"  value="Delete" actionListener="#{groupController.delete}" update=":growl,datalist" disabled="#{empty groupController.selected}" onstart="PF('Loading').show()" onsuccess="PF('Loading').hide()">
+                        <p:confirm header="Confirmation" message="Do you really want to perform this operation?" icon="fa fa-warning"/>
                     </p:commandButton>
                 </div>
             </f:facet>
@@ -72,5 +74,5 @@
 
         <ui:include src="/confirmation.xhtml"/>
     </h:form>
-
+	
 </ui:composition>
