--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -6,7 +6,7 @@
       xmlns:p="http://primefaces.org/ui">
 
     <h:head>
-        <title><ui:insert name="title">Example System</ui:insert></title>
+        <title><ui:insert name="title">Ambulance Task</ui:insert></title>
         <h:outputStylesheet library="css" name="pfcrud.css"/>
         <h:outputScript library="scripts" name="pfcrud.js"/>
     </h:head>
